parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM g_main_quad ID add_program SEMICOLON vars funcs main end_program
Rule 2     add_program -> <empty>
Rule 3     end_program -> <empty>
Rule 4     main -> MAIN OPEN_PAREN CLOSE_PAREN fill_main_quad block
Rule 5     g_main_quad -> <empty>
Rule 6     fill_main_quad -> <empty>
Rule 7     funcs -> func_type MODULE ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs
Rule 8     funcs -> empty
Rule 9     end_funcs -> <empty>
Rule 10    count_local_vars -> <empty>
Rule 11    add_module -> <empty>
Rule 12    funcs_comp -> ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs
Rule 13    add_parameter_amount -> <empty>
Rule 14    funcs_params -> var_type variable_params funcs_params_comp
Rule 15    funcs_params -> empty
Rule 16    funcs_params_comp -> COMMA var_type variable_params funcs_params_comp
Rule 17    funcs_params_comp -> empty
Rule 18    variable_params -> ID
Rule 19    variable_params -> ID dim
Rule 20    block -> OPEN_BRACES statements CLOSE_BRACES
Rule 21    func_type -> var_type
Rule 22    func_type -> VOID
Rule 23    var_type -> INT
Rule 24    var_type -> FLOAT
Rule 25    var_type -> CHAR
Rule 26    vars -> VARS var_comp
Rule 27    vars -> empty
Rule 28    var_comp -> var_type ids_dec var_comp_2 var_comp_final
Rule 29    var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive
Rule 30    var_comp_2 -> COMMA ids_dec var_comp_3
Rule 31    var_comp_2 -> empty
Rule 32    var_comp_3 -> var_comp_2
Rule 33    var_comp_recursive -> var_type ids_dec var_comp_2 var_comp_final
Rule 34    var_comp_recursive -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive
Rule 35    var_comp_final -> SEMICOLON
Rule 36    var_comp_final -> var_module_trans
Rule 37    var_module_trans -> SEMICOLON var_type MODULE funcs_comp
Rule 38    ids_dec -> ids_dec_matrix
Rule 39    ids_dec -> ids_dec_array
Rule 40    ids_dec -> ids_dec_single
Rule 41    ids_dec_matrix -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
Rule 42    ids_dec_array -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS
Rule 43    ids_dec_single -> ID
Rule 44    ids -> ids_matrix
Rule 45    ids -> ids_array
Rule 46    ids -> ids_single
Rule 47    ids_matrix -> ID OPEN_BRACKETS exp CLOSE_BRACKETS OPEN_BRACKETS exp CLOSE_BRACKETS
Rule 48    ids_array -> ID OPEN_BRACKETS exp CLOSE_BRACKETS
Rule 49    ids_single -> ID
Rule 50    statements -> assignment SEMICOLON statements
Rule 51    statements -> read SEMICOLON statements
Rule 52    statements -> write SEMICOLON statements
Rule 53    statements -> condition statements
Rule 54    statements -> return SEMICOLON statements
Rule 55    statements -> func_call SEMICOLON statements
Rule 56    statements -> empty
Rule 57    assignment -> ids ASSIGN expressions
Rule 58    read -> READ OPEN_PAREN ids g_quad_read read_comp CLOSE_PAREN
Rule 59    read_comp -> COMMA ids g_quad_read read_comp
Rule 60    read_comp -> empty
Rule 61    g_quad_read -> <empty>
Rule 62    write -> WRITE OPEN_PAREN CT_STRING g_quad_write_str write_comp CLOSE_PAREN
Rule 63    write -> WRITE OPEN_PAREN expressions g_quad_write write_comp CLOSE_PAREN
Rule 64    write_comp -> COMMA CT_STRING g_quad_write_str write_comp
Rule 65    write_comp -> COMMA expressions g_quad_write write_comp
Rule 66    write_comp -> empty
Rule 67    g_quad_write_str -> <empty>
Rule 68    g_quad_write -> <empty>
Rule 69    end_if -> <empty>
Rule 70    condition -> IF OPEN_PAREN expressions CLOSE_PAREN g_if_quad THEN block end_if
Rule 71    condition -> IF OPEN_PAREN expressions CLOSE_PAREN g_if_quad THEN block ELSE g_else_quad block end_if
Rule 72    condition -> WHILE while_jump OPEN_PAREN expressions CLOSE_PAREN g_while_quad DO block end_while
Rule 73    condition -> FOR ids validate_for ASSIGN expressions for_counter_control TO expressions for_counter_end DO block end_for
Rule 74    g_if_quad -> <empty>
Rule 75    g_else_quad -> <empty>
Rule 76    while_jump -> <empty>
Rule 77    g_while_quad -> <empty>
Rule 78    end_while -> <empty>
Rule 79    validate_for -> <empty>
Rule 80    for_counter_control -> <empty>
Rule 81    for_counter_end -> <empty>
Rule 82    end_for -> <empty>
Rule 83    return -> RETURN OPEN_PAREN expressions CLOSE_PAREN g_quad_return
Rule 84    g_quad_return -> <empty>
Rule 85    func_call -> ID verify_function_exists OPEN_PAREN era_activation func_call_comp CLOSE_PAREN g_gosub_quad function_call_end
Rule 86    function_call_end -> <empty>
Rule 87    g_gosub_quad -> <empty>
Rule 88    change_to_global -> <empty>
Rule 89    verify_function_exists -> <empty>
Rule 90    era_activation -> <empty>
Rule 91    func_call_comp -> expressions g_parameter_quad func_call_comp
Rule 92    func_call_comp -> COMMA expressions g_parameter_quad func_call_comp
Rule 93    func_call_comp -> empty
Rule 94    g_parameter_quad -> <empty>
Rule 95    expressions -> expressions_comp
Rule 96    expressions_comp -> expression_comp_2
Rule 97    expressions_comp -> expression_comp_2 OR expressions_comp
Rule 98    expression_comp_2 -> expression_comp_3
Rule 99    expression_comp_2 -> expression_comp_3 AND expression_comp_2
Rule 100   expression_comp_3 -> exp expressions_op exp g_quad_logic
Rule 101   expression_comp_3 -> exp
Rule 102   g_quad_logic -> <empty>
Rule 103   expressions_op -> LESS_THAN add_op
Rule 104   expressions_op -> LESS_THAN_EQUAL add_op
Rule 105   expressions_op -> MORE_THAN add_op
Rule 106   expressions_op -> MORE_THAN_EQUAL add_op
Rule 107   expressions_op -> EQUALS add_op
Rule 108   expressions_op -> NOT_EQUALS add_op
Rule 109   exp -> term g_quad_exp_as_alone
Rule 110   exp -> term g_quad_exp_as exp_comp
Rule 111   g_quad_exp_as -> <empty>
Rule 112   g_quad_exp_as_alone -> <empty>
Rule 113   exp_comp -> PLUS add_op exp
Rule 114   exp_comp -> MINUS add_op exp
Rule 115   term -> factor g_quad_exp_md_alone
Rule 116   term -> factor g_quad_exp_md term_comp
Rule 117   g_quad_exp_md -> <empty>
Rule 118   g_quad_exp_md_alone -> <empty>
Rule 119   term_comp -> MULTIPLIES add_op term
Rule 120   term_comp -> DIVIDE add_op term
Rule 121   add_op -> <empty>
Rule 122   factor -> OPEN_PAREN add_fake expressions CLOSE_PAREN rem_fake
Rule 123   factor -> variable
Rule 124   factor -> func_call
Rule 125   factor -> CT_INT add_ct_int
Rule 126   factor -> CT_FLOAT add_ct_float
Rule 127   factor -> CT_CHAR add_ct_char
Rule 128   add_fake -> <empty>
Rule 129   rem_fake -> <empty>
Rule 130   add_ct_int -> <empty>
Rule 131   add_ct_float -> <empty>
Rule 132   add_ct_char -> <empty>
Rule 133   variable -> ID add_id
Rule 134   variable -> ID dim
Rule 135   add_id -> <empty>
Rule 136   dim -> OPEN_BRACKETS exp CLOSE_BRACKETS
Rule 137   empty -> <empty>

Terminals, with rules where they appear

AND                  : 99
ASSIGN               : 57 73
CHAR                 : 25
CLOSE_BRACES         : 20
CLOSE_BRACKETS       : 41 41 42 47 47 48 136
CLOSE_PAREN          : 4 7 12 58 62 63 70 71 72 83 85 122
COMMA                : 16 30 59 64 65 92
CT_CHAR              : 127
CT_FLOAT             : 126
CT_INT               : 41 41 42 125
CT_STRING            : 62 64
DIVIDE               : 120
DO                   : 72 73
ELSE                 : 71
EQUALS               : 107
FLOAT                : 24
FOR                  : 73
ID                   : 1 7 12 18 19 41 42 43 47 48 49 85 133 134
IF                   : 70 71
INT                  : 23
LESS_THAN            : 103
LESS_THAN_EQUAL      : 104
MAIN                 : 4
MINUS                : 114
MODULE               : 7 37
MORE_THAN            : 105
MORE_THAN_EQUAL      : 106
MULTIPLIES           : 119
NOT_EQUALS           : 108
OPEN_BRACES          : 20
OPEN_BRACKETS        : 41 41 42 47 47 48 136
OPEN_PAREN           : 4 7 12 58 62 63 70 71 72 83 85 122
OR                   : 97
PLUS                 : 113
PROGRAM              : 1
READ                 : 58
RETURN               : 83
SEMICOLON            : 1 29 34 35 37 50 51 52 54 55
THEN                 : 70 71
TO                   : 73
VARS                 : 26
VOID                 : 22
WHILE                : 72
WRITE                : 62 63
error                : 

Nonterminals, with rules where they appear

add_ct_char          : 127
add_ct_float         : 126
add_ct_int           : 125
add_fake             : 122
add_id               : 133
add_module           : 7 12
add_op               : 103 104 105 106 107 108 113 114 119 120
add_parameter_amount : 7 12
add_program          : 1
assignment           : 50
block                : 4 7 12 70 71 71 72 73
change_to_global     : 
condition            : 53
count_local_vars     : 7 12
dim                  : 19 134
empty                : 8 15 17 27 31 56 60 66 93
end_for              : 73
end_funcs            : 7 12
end_if               : 70 71
end_program          : 1
end_while            : 72
era_activation       : 85
exp                  : 47 47 48 100 100 101 113 114 136
exp_comp             : 110
expression_comp_2    : 96 97 99
expression_comp_3    : 98 99
expressions          : 57 63 65 70 71 72 73 73 83 91 92 122
expressions_comp     : 95 97
expressions_op       : 100
factor               : 115 116
fill_main_quad       : 4
for_counter_control  : 73
for_counter_end      : 73
func_call            : 55 124
func_call_comp       : 85 91 92
func_type            : 7
funcs                : 1 7 12
funcs_comp           : 37
funcs_params         : 7 12
funcs_params_comp    : 14 16
function_call_end    : 85
g_else_quad          : 71
g_gosub_quad         : 85
g_if_quad            : 70 71
g_main_quad          : 1
g_parameter_quad     : 91 92
g_quad_exp_as        : 110
g_quad_exp_as_alone  : 109
g_quad_exp_md        : 116
g_quad_exp_md_alone  : 115
g_quad_logic         : 100
g_quad_read          : 58 59
g_quad_return        : 83
g_quad_write         : 63 65
g_quad_write_str     : 62 64
g_while_quad         : 72
ids                  : 57 58 59 73
ids_array            : 45
ids_dec              : 28 29 30 33 34
ids_dec_array        : 39
ids_dec_matrix       : 38
ids_dec_single       : 40
ids_matrix           : 44
ids_single           : 46
main                 : 1
program              : 0
read                 : 51
read_comp            : 58 59
rem_fake             : 122
return               : 54
statements           : 20 50 51 52 53 54 55
term                 : 109 110 119 120
term_comp            : 116
validate_for         : 73
var_comp             : 26
var_comp_2           : 28 29 32 33 34
var_comp_3           : 30
var_comp_final       : 28 33
var_comp_recursive   : 29 34
var_module_trans     : 36
var_type             : 14 16 21 28 29 33 34 37
variable             : 123
variable_params      : 14 16
vars                 : 1 7 12
verify_function_exists : 85
while_jump           : 72
write                : 52
write_comp           : 62 63 64 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM g_main_quad ID add_program SEMICOLON vars funcs main end_program

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . g_main_quad ID add_program SEMICOLON vars funcs main end_program
    (5) g_main_quad -> .

    ID              reduce using rule 5 (g_main_quad -> .)

    g_main_quad                    shift and go to state 3

state 3

    (1) program -> PROGRAM g_main_quad . ID add_program SEMICOLON vars funcs main end_program

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM g_main_quad ID . add_program SEMICOLON vars funcs main end_program
    (2) add_program -> .

    SEMICOLON       reduce using rule 2 (add_program -> .)

    add_program                    shift and go to state 5

state 5

    (1) program -> PROGRAM g_main_quad ID add_program . SEMICOLON vars funcs main end_program

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM g_main_quad ID add_program SEMICOLON . vars funcs main end_program
    (26) vars -> . VARS var_comp
    (27) vars -> . empty
    (137) empty -> .

    VARS            shift and go to state 8
    VOID            reduce using rule 137 (empty -> .)
    INT             reduce using rule 137 (empty -> .)
    FLOAT           reduce using rule 137 (empty -> .)
    CHAR            reduce using rule 137 (empty -> .)
    MAIN            reduce using rule 137 (empty -> .)

    vars                           shift and go to state 7
    empty                          shift and go to state 9

state 7

    (1) program -> PROGRAM g_main_quad ID add_program SEMICOLON vars . funcs main end_program
    (7) funcs -> . func_type MODULE ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs
    (8) funcs -> . empty
    (21) func_type -> . var_type
    (22) func_type -> . VOID
    (137) empty -> .
    (23) var_type -> . INT
    (24) var_type -> . FLOAT
    (25) var_type -> . CHAR

    VOID            shift and go to state 14
    MAIN            reduce using rule 137 (empty -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    funcs                          shift and go to state 10
    func_type                      shift and go to state 11
    empty                          shift and go to state 12
    var_type                       shift and go to state 13

state 8

    (26) vars -> VARS . var_comp
    (28) var_comp -> . var_type ids_dec var_comp_2 var_comp_final
    (29) var_comp -> . var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive
    (23) var_type -> . INT
    (24) var_type -> . FLOAT
    (25) var_type -> . CHAR

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    var_comp                       shift and go to state 18
    var_type                       shift and go to state 19

state 9

    (27) vars -> empty .

    VOID            reduce using rule 27 (vars -> empty .)
    INT             reduce using rule 27 (vars -> empty .)
    FLOAT           reduce using rule 27 (vars -> empty .)
    CHAR            reduce using rule 27 (vars -> empty .)
    MAIN            reduce using rule 27 (vars -> empty .)
    OPEN_BRACES     reduce using rule 27 (vars -> empty .)


state 10

    (1) program -> PROGRAM g_main_quad ID add_program SEMICOLON vars funcs . main end_program
    (4) main -> . MAIN OPEN_PAREN CLOSE_PAREN fill_main_quad block

    MAIN            shift and go to state 21

    main                           shift and go to state 20

state 11

    (7) funcs -> func_type . MODULE ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs

    MODULE          shift and go to state 22


state 12

    (8) funcs -> empty .

    MAIN            reduce using rule 8 (funcs -> empty .)
    VOID            reduce using rule 8 (funcs -> empty .)
    INT             reduce using rule 8 (funcs -> empty .)
    FLOAT           reduce using rule 8 (funcs -> empty .)
    CHAR            reduce using rule 8 (funcs -> empty .)
    OPEN_BRACES     reduce using rule 8 (funcs -> empty .)


state 13

    (21) func_type -> var_type .

    MODULE          reduce using rule 21 (func_type -> var_type .)


state 14

    (22) func_type -> VOID .

    MODULE          reduce using rule 22 (func_type -> VOID .)


state 15

    (23) var_type -> INT .

    MODULE          reduce using rule 23 (var_type -> INT .)
    ID              reduce using rule 23 (var_type -> INT .)


state 16

    (24) var_type -> FLOAT .

    MODULE          reduce using rule 24 (var_type -> FLOAT .)
    ID              reduce using rule 24 (var_type -> FLOAT .)


state 17

    (25) var_type -> CHAR .

    MODULE          reduce using rule 25 (var_type -> CHAR .)
    ID              reduce using rule 25 (var_type -> CHAR .)


state 18

    (26) vars -> VARS var_comp .

    VOID            reduce using rule 26 (vars -> VARS var_comp .)
    INT             reduce using rule 26 (vars -> VARS var_comp .)
    FLOAT           reduce using rule 26 (vars -> VARS var_comp .)
    CHAR            reduce using rule 26 (vars -> VARS var_comp .)
    MAIN            reduce using rule 26 (vars -> VARS var_comp .)
    OPEN_BRACES     reduce using rule 26 (vars -> VARS var_comp .)


state 19

    (28) var_comp -> var_type . ids_dec var_comp_2 var_comp_final
    (29) var_comp -> var_type . ids_dec var_comp_2 SEMICOLON var_comp_recursive
    (38) ids_dec -> . ids_dec_matrix
    (39) ids_dec -> . ids_dec_array
    (40) ids_dec -> . ids_dec_single
    (41) ids_dec_matrix -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (43) ids_dec_single -> . ID

    ID              shift and go to state 27

    ids_dec                        shift and go to state 23
    ids_dec_matrix                 shift and go to state 24
    ids_dec_array                  shift and go to state 25
    ids_dec_single                 shift and go to state 26

state 20

    (1) program -> PROGRAM g_main_quad ID add_program SEMICOLON vars funcs main . end_program
    (3) end_program -> .

    $end            reduce using rule 3 (end_program -> .)

    end_program                    shift and go to state 28

state 21

    (4) main -> MAIN . OPEN_PAREN CLOSE_PAREN fill_main_quad block

    OPEN_PAREN      shift and go to state 29


state 22

    (7) funcs -> func_type MODULE . ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs

    ID              shift and go to state 30


state 23

    (28) var_comp -> var_type ids_dec . var_comp_2 var_comp_final
    (29) var_comp -> var_type ids_dec . var_comp_2 SEMICOLON var_comp_recursive
    (30) var_comp_2 -> . COMMA ids_dec var_comp_3
    (31) var_comp_2 -> . empty
    (137) empty -> .

    COMMA           shift and go to state 32
    SEMICOLON       reduce using rule 137 (empty -> .)

    var_comp_2                     shift and go to state 31
    empty                          shift and go to state 33

state 24

    (38) ids_dec -> ids_dec_matrix .

    COMMA           reduce using rule 38 (ids_dec -> ids_dec_matrix .)
    SEMICOLON       reduce using rule 38 (ids_dec -> ids_dec_matrix .)


state 25

    (39) ids_dec -> ids_dec_array .

    COMMA           reduce using rule 39 (ids_dec -> ids_dec_array .)
    SEMICOLON       reduce using rule 39 (ids_dec -> ids_dec_array .)


state 26

    (40) ids_dec -> ids_dec_single .

    COMMA           reduce using rule 40 (ids_dec -> ids_dec_single .)
    SEMICOLON       reduce using rule 40 (ids_dec -> ids_dec_single .)


state 27

    (41) ids_dec_matrix -> ID . OPEN_BRACKETS CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> ID . OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (43) ids_dec_single -> ID .

    OPEN_BRACKETS   shift and go to state 34
    COMMA           reduce using rule 43 (ids_dec_single -> ID .)
    SEMICOLON       reduce using rule 43 (ids_dec_single -> ID .)


state 28

    (1) program -> PROGRAM g_main_quad ID add_program SEMICOLON vars funcs main end_program .

    $end            reduce using rule 1 (program -> PROGRAM g_main_quad ID add_program SEMICOLON vars funcs main end_program .)


state 29

    (4) main -> MAIN OPEN_PAREN . CLOSE_PAREN fill_main_quad block

    CLOSE_PAREN     shift and go to state 35


state 30

    (7) funcs -> func_type MODULE ID . add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs
    (11) add_module -> .

    OPEN_PAREN      reduce using rule 11 (add_module -> .)

    add_module                     shift and go to state 36

state 31

    (28) var_comp -> var_type ids_dec var_comp_2 . var_comp_final
    (29) var_comp -> var_type ids_dec var_comp_2 . SEMICOLON var_comp_recursive
    (35) var_comp_final -> . SEMICOLON
    (36) var_comp_final -> . var_module_trans
    (37) var_module_trans -> . SEMICOLON var_type MODULE funcs_comp

    SEMICOLON       shift and go to state 38

    var_comp_final                 shift and go to state 37
    var_module_trans               shift and go to state 39

state 32

    (30) var_comp_2 -> COMMA . ids_dec var_comp_3
    (38) ids_dec -> . ids_dec_matrix
    (39) ids_dec -> . ids_dec_array
    (40) ids_dec -> . ids_dec_single
    (41) ids_dec_matrix -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (43) ids_dec_single -> . ID

    ID              shift and go to state 27

    ids_dec                        shift and go to state 40
    ids_dec_matrix                 shift and go to state 24
    ids_dec_array                  shift and go to state 25
    ids_dec_single                 shift and go to state 26

state 33

    (31) var_comp_2 -> empty .

    SEMICOLON       reduce using rule 31 (var_comp_2 -> empty .)


state 34

    (41) ids_dec_matrix -> ID OPEN_BRACKETS . CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> ID OPEN_BRACKETS . CT_INT CLOSE_BRACKETS

    CT_INT          shift and go to state 41


state 35

    (4) main -> MAIN OPEN_PAREN CLOSE_PAREN . fill_main_quad block
    (6) fill_main_quad -> .

    OPEN_BRACES     reduce using rule 6 (fill_main_quad -> .)

    fill_main_quad                 shift and go to state 42

state 36

    (7) funcs -> func_type MODULE ID add_module . OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs

    OPEN_PAREN      shift and go to state 43


state 37

    (28) var_comp -> var_type ids_dec var_comp_2 var_comp_final .

    VOID            reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)
    INT             reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)
    FLOAT           reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)
    CHAR            reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)
    MAIN            reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)
    OPEN_BRACES     reduce using rule 28 (var_comp -> var_type ids_dec var_comp_2 var_comp_final .)


state 38

    (29) var_comp -> var_type ids_dec var_comp_2 SEMICOLON . var_comp_recursive
    (35) var_comp_final -> SEMICOLON .
    (37) var_module_trans -> SEMICOLON . var_type MODULE funcs_comp
    (33) var_comp_recursive -> . var_type ids_dec var_comp_2 var_comp_final
    (34) var_comp_recursive -> . var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive
    (23) var_type -> . INT
    (24) var_type -> . FLOAT
    (25) var_type -> . CHAR

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    VOID            reduce using rule 35 (var_comp_final -> SEMICOLON .)
    MAIN            reduce using rule 35 (var_comp_final -> SEMICOLON .)
    OPEN_BRACES     reduce using rule 35 (var_comp_final -> SEMICOLON .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

  ! INT             [ reduce using rule 35 (var_comp_final -> SEMICOLON .) ]
  ! FLOAT           [ reduce using rule 35 (var_comp_final -> SEMICOLON .) ]
  ! CHAR            [ reduce using rule 35 (var_comp_final -> SEMICOLON .) ]

    var_type                       shift and go to state 44
    var_comp_recursive             shift and go to state 45

state 39

    (36) var_comp_final -> var_module_trans .

    VOID            reduce using rule 36 (var_comp_final -> var_module_trans .)
    INT             reduce using rule 36 (var_comp_final -> var_module_trans .)
    FLOAT           reduce using rule 36 (var_comp_final -> var_module_trans .)
    CHAR            reduce using rule 36 (var_comp_final -> var_module_trans .)
    MAIN            reduce using rule 36 (var_comp_final -> var_module_trans .)
    OPEN_BRACES     reduce using rule 36 (var_comp_final -> var_module_trans .)


state 40

    (30) var_comp_2 -> COMMA ids_dec . var_comp_3
    (32) var_comp_3 -> . var_comp_2
    (30) var_comp_2 -> . COMMA ids_dec var_comp_3
    (31) var_comp_2 -> . empty
    (137) empty -> .

    COMMA           shift and go to state 32
    SEMICOLON       reduce using rule 137 (empty -> .)

    var_comp_3                     shift and go to state 46
    var_comp_2                     shift and go to state 47
    empty                          shift and go to state 33

state 41

    (41) ids_dec_matrix -> ID OPEN_BRACKETS CT_INT . CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> ID OPEN_BRACKETS CT_INT . CLOSE_BRACKETS

    CLOSE_BRACKETS  shift and go to state 48


state 42

    (4) main -> MAIN OPEN_PAREN CLOSE_PAREN fill_main_quad . block
    (20) block -> . OPEN_BRACES statements CLOSE_BRACES

    OPEN_BRACES     shift and go to state 50

    block                          shift and go to state 49

state 43

    (7) funcs -> func_type MODULE ID add_module OPEN_PAREN . funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs
    (14) funcs_params -> . var_type variable_params funcs_params_comp
    (15) funcs_params -> . empty
    (23) var_type -> . INT
    (24) var_type -> . FLOAT
    (25) var_type -> . CHAR
    (137) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    CLOSE_PAREN     reduce using rule 137 (empty -> .)

    funcs_params                   shift and go to state 51
    var_type                       shift and go to state 52
    empty                          shift and go to state 53

state 44

    (37) var_module_trans -> SEMICOLON var_type . MODULE funcs_comp
    (33) var_comp_recursive -> var_type . ids_dec var_comp_2 var_comp_final
    (34) var_comp_recursive -> var_type . ids_dec var_comp_2 SEMICOLON var_comp_recursive
    (38) ids_dec -> . ids_dec_matrix
    (39) ids_dec -> . ids_dec_array
    (40) ids_dec -> . ids_dec_single
    (41) ids_dec_matrix -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> . ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (43) ids_dec_single -> . ID

    MODULE          shift and go to state 54
    ID              shift and go to state 27

    ids_dec                        shift and go to state 55
    ids_dec_matrix                 shift and go to state 24
    ids_dec_array                  shift and go to state 25
    ids_dec_single                 shift and go to state 26

state 45

    (29) var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .

    VOID            reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)
    INT             reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)
    FLOAT           reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)
    CHAR            reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)
    MAIN            reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)
    OPEN_BRACES     reduce using rule 29 (var_comp -> var_type ids_dec var_comp_2 SEMICOLON var_comp_recursive .)


state 46

    (30) var_comp_2 -> COMMA ids_dec var_comp_3 .

    SEMICOLON       reduce using rule 30 (var_comp_2 -> COMMA ids_dec var_comp_3 .)


state 47

    (32) var_comp_3 -> var_comp_2 .

    SEMICOLON       reduce using rule 32 (var_comp_3 -> var_comp_2 .)


state 48

    (41) ids_dec_matrix -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS . OPEN_BRACKETS CT_INT CLOSE_BRACKETS
    (42) ids_dec_array -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS .

    OPEN_BRACKETS   shift and go to state 56
    COMMA           reduce using rule 42 (ids_dec_array -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS .)
    SEMICOLON       reduce using rule 42 (ids_dec_array -> ID OPEN_BRACKETS CT_INT CLOSE_BRACKETS .)


state 49

    (4) main -> MAIN OPEN_PAREN CLOSE_PAREN fill_main_quad block .

    $end            reduce using rule 4 (main -> MAIN OPEN_PAREN CLOSE_PAREN fill_main_quad block .)


state 50

    (20) block -> OPEN_BRACES . statements CLOSE_BRACES
    (50) statements -> . assignment SEMICOLON statements
    (51) statements -> . read SEMICOLON statements
    (52) statements -> . write SEMICOLON statements
    (53) statements -> . condition statements
    (54) statements -> . return SEMICOLON statements
    (55) statements -> . func_call SEMICOLON statements
    (56) statements -> . empty
    (57) assignment -> . ids ASSIGN expressions
    (58) read -> . READ OPEN_PAREN ids g_quad_read read_comp CLOSE_PAREN
    (62) write -> . WRITE OPEN_PAREN CT_STRING g_quad_write_str write_comp CLOSE_PAREN
    (63) write -> . WRITE OPEN_PAREN expressions g_quad_write write_comp CLOSE_PAREN
    (70) condition -> . IF OPEN_PAREN expressions CLOSE_PAREN g_if_quad THEN block end_if
    (71) condition -> . IF OPEN_PAREN expressions CLOSE_PAREN g_if_quad THEN block ELSE g_else_quad block end_if
    (72) condition -> . WHILE while_jump OPEN_PAREN expressions CLOSE_PAREN g_while_quad DO block end_while
    (73) condition -> . FOR ids validate_for ASSIGN expressions for_counter_control TO expressions for_counter_end DO block end_for
    (83) return -> . RETURN OPEN_PAREN expressions CLOSE_PAREN g_quad_return
    (85) func_call -> . ID verify_function_exists OPEN_PAREN era_activation func_call_comp CLOSE_PAREN g_gosub_quad function_call_end
    (137) empty -> .
    (44) ids -> . ids_matrix
    (45) ids -> . ids_array
    (46) ids -> . ids_single
    (47) ids_matrix -> . ID OPEN_BRACKETS exp CLOSE_BRACKETS OPEN_BRACKETS exp CLOSE_BRACKETS
    (48) ids_array -> . ID OPEN_BRACKETS exp CLOSE_BRACKETS
    (49) ids_single -> . ID

    READ            shift and go to state 66
    WRITE           shift and go to state 67
    IF              shift and go to state 68
    WHILE           shift and go to state 69
    FOR             shift and go to state 70
    RETURN          shift and go to state 71
    ID              shift and go to state 72
    CLOSE_BRACES    reduce using rule 137 (empty -> .)

    statements                     shift and go to state 57
    assignment                     shift and go to state 58
    read                           shift and go to state 59
    write                          shift and go to state 60
    condition                      shift and go to state 61
    return                         shift and go to state 62
    func_call                      shift and go to state 63
    empty                          shift and go to state 64
    ids                            shift and go to state 65
    ids_matrix                     shift and go to state 73
    ids_array                      shift and go to state 74
    ids_single                     shift and go to state 75

state 51

    (7) funcs -> func_type MODULE ID add_module OPEN_PAREN funcs_params . CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs

    CLOSE_PAREN     shift and go to state 76


state 52

    (14) funcs_params -> var_type . variable_params funcs_params_comp
    (18) variable_params -> . ID
    (19) variable_params -> . ID dim

    ID              shift and go to state 78

    variable_params                shift and go to state 77

state 53

    (15) funcs_params -> empty .

    CLOSE_PAREN     reduce using rule 15 (funcs_params -> empty .)


state 54

    (37) var_module_trans -> SEMICOLON var_type MODULE . funcs_comp
    (12) funcs_comp -> . ID add_module OPEN_PAREN funcs_params CLOSE_PAREN add_parameter_amount vars count_local_vars block end_funcs funcs

    ID              shift and go to state 80

    funcs_comp                     shift and go to state 79

state 55
